Updated to:  `maven-clean-plugin` version 3.2.0  `maven-failsafe-plugin` and `maven-surefire-plugin` version 3.0.0-M6  `dependency-check-maven` version 7.0.4